--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,6 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": [
-		"src/**/*",
-		"src/*"
-	],
-	"exclude": [
-		"node_modules"
-	]
+	"include": ["src/**/*", "src/*"],
+	"exclude": ["node_modules"]
 }
