--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
 		"typescript": "^4.2.2"
 	},
 	"dependencies": {
-		"discord-akairo": "SkyblockDev/discord-akairo#59db80742b2bba62cdcfa5505b4522a7134e8e04",
-		"discord.js": "discordjs/discord.js#f7643f7bbe64003ad8b221006190dd15529651e9"
+		"discord-akairo": "NotEnoughUpdates/discord-akairo",
+		"discord.js": "NotEnoughUpdates/discord.js"
 	},
 	"prettier": {
 		"useTabs": true,
